# cpp-python_socket

./: .gitignore  CMakeLists.txt  CppPythonSocket  README.md  build_cpp.sh  cpp_python_socket  python_server_test.py  run_cpp_client_test.sh  setup.py
_installation_testing/: CMakeLists.txt  python_server_test.py  test.cpp
cpp/: CMakeLists.txt  CppPythonSocketConfig.h.in  build.sh  client.cpp  cpp_client_test.cpp  cpp_sockets-config.cmake  run_cpp_client.sh  run_cpp_client_test.sh
cpp/cpp_sockets/: CMakeLists.txt
cpp/cpp_sockets/include/: client.hpp
cpp/cpp_sockets/src/: client.cpp
cpp/include/: client.hpp
cpp/src/: client.cpp
python/: LICENCE  README.md  build_and_upload.sh  server.py  server_unit_test.py  setup.py
python/CppPythonSocket/: __init__.py  server.py
